# bot_workspace

./: howto.txt
models/arrow_red/: model.sdf
src/Rove/: CMakeLists.txt  package.xml
src/Rove/config/: joint_names_Rove.yaml
src/Rove/launch/: display.launch  gazebo.launch
src/Rove/urdf/: Rove.csv  Rove.urdf
src/actionspkg/: CMakeLists.txt  package.xml
src/actionspkg/action/: Fibonacci.action
src/actionspkg/src/: action_client.cpp  action_server.cpp
src/fourbot/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/fourbot/launch/: gmapping_launch.launch  robot_description.launch  rviz_gazebo.launch  temp.launch  temp_amcl.launch  temp_movebase.launch  temp_trav_combined.launch
src/fourbot/src/: depth_node.py  movement.py  movement_depth.py
src/fourbot/urdf/: fourbot.gazebo  fourbot.xacro
src/fourbot/worlds/: arrows.world  mars_noarrows.world  obstacle_course.world  terrain_obstacles.world  trav.rviz
src/nav_goals/: package.xml
src/nav_goals/scripts/: movebase_seq.py
src/publisher_subscriber/launch/: union.launch
src/simple_navigation_goals/launch/: launch.launch
src/simple_navigation_goals/src/: simple_navigation_goals.py
src/vision/src/: arrow_3.py  arrow_4.py  fake_arrow.py  keras_tf_model.py  keras_tf_publisher.py
